fix: fixed the issue of the product pictures not showing properly, and fixed the modal not being scrollable if there are more products in

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -12,14 +12,25 @@
   overflow: hidden;
 }
 
+.modal__product {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    img {
+      border-radius: 4px;
+    }
+}
+
 .modal-content {
   background-color: white;
-  padding: 40px;
+  padding: 40px 24px 24px 24px;
   border-radius: 12px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
   width: 100%;
   text-align: left;
+  overflow-y: auto;
+  max-height: 80vh;
 
   img {
     width: 48px;
@@ -80,4 +91,12 @@
 .modal__product-price {
   font-size: 16px!important;
   color: hsl(14, 65%, 9%)!important;
+  margin-left: auto!important;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-content {
+    padding: 40px;
+    width: 690px;
+  } 
 }
